fix for horizontal scroll on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,8 @@
   html {font-size:14px;} 
 }
 
+body, html { overflow-x:hidden; }
+
 body {
 	font-family: Open Sans,sans-serif;
 	background-color: #f2f4f5;
